CSS part sorted

--- a/src/components/NumbersScreen.module.css
+++ b/src/components/NumbersScreen.module.css
@@ -4,7 +4,86 @@
     box-sizing: border-box;
 }
 
-.container {
+.container2 {
     display: grid;
-    grid-template: '...' 100px '...' 100px '...' 100px '...' 100px / 150px 150px 150px;
+    grid-template: 'one two three' 100px 'four five six' 100px 'seven eight nine' 100px 'zero addition subtraction' 100px / 150px 150px 150px;
+    width: 60%;
+    padding: 60px;
+    margin: 50px;
+    grid-gap: 10px;
+    justify-content: center;
+    text-align: center;
+    background-color: aquamarine;
+}
+
+.one {
+    grid-area: one;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.two {
+    grid-area: two;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.three {
+    grid-area: three;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.four {
+    grid-area: four;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.five {
+    grid-area: five;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.six {
+    grid-area: six;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.seven {
+    grid-area: seven;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.eight {
+    grid-area: eight;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.nine {
+    grid-area: nine;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.zero {
+    grid-area: zero;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.addition {
+    grid-area: addition;
+    border: 2px solid brown;
+    padding-top: 40px;
+}
+
+.subtraction {
+    grid-area: subtraction;
+    border: 2px solid brown;
+    padding-top: 40px;
 }
